# Amadeus

./: .env  .gitignore  Cargo.toml  ENVIRONMENT.md  README.md  Rocket.toml  USAGE.md  docker-compose.yml  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: rust_ci.yml
amadeus_embedded/: Cargo.toml  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
amadeus_embedded/amadeus_embedded/: platformio.ini
amadeus_embedded/amadeus_embedded/src/: arduino_secrets.h  main.cpp
amadeus_embedded/amadeus_embedded/src/matrix/: matrix.cpp  matrix.h
backend/: Cargo.toml  Dockerfile
backend/src/: error.rs  main.rs  routes.rs
backend/src/model/: instanciation.rs  mod.rs  person.rs
backend/src/models/: mod.rs  person.rs  song.rs
backend/src/routes/: mod.rs
bdd/: 000027.sst  IDENTITY  MANIFEST-000022
file_sender/: Cargo.toml
file_sender/src/: main.rs  udpclient.rs
file_sender/src/client/: mod.rs  network.rs  socket.rs  wav_handler.rs
file_sender/src/errors/: connection_error.rs  mod.rs  socket_error.rs  wav_error.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: storage
frontend/src/: App.tsx  env.tsx  main.tsx  provider.tsx
frontend/src/components/: Button.tsx  Cards.tsx  MusicCards.tsx  NavBar.tsx  Navbar.tsx  SingleFileUploader.tsx  StarRating.tsx
frontend/src/layouts/: default.tsx
frontend/src/pages/: default.tsx  home.tsx  myComposition.tsx  my_composition.tsx
tokio_signal_handler/: Cargo.toml  Dockerfile  README.md
tokio_signal_handler/src/: main.rs  signalhandleralgorithmresearch.txt
tokio_signal_handler/src/processors/: handler.rs  mod.rs  process.rs  receptor.rs  sender.rs
tokio_signal_handler/tests/: integration_test.rs
webapp/: Cargo.toml  Dockerfile
webapp/src/: main.rs
