[package]
name = "amadeus_embedded"
version = "0.1.0"
authors = ["Lucas Achard <lucas.achard5@orange.fr>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "amadeus_embedded"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
debug = false

[profile.dev]
opt-level = "z"
debug = false

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36.1", features = [] }

[build-dependencies]
embuild = "0.33"

[package.metadata.espflash]
partitions = "partitions.csv"

