[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
env-file-reader = "0.3.0"
faker_rand = "0.1.1"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
surrealdb = "2.0.4"
thiserror = "1.0.64"
chrono = "0.4.40"
tokio = "1.44.1"
rocket_cors = "0.6.0"
